--- a/UOBWebSample/UOBWebSample.csproj
+++ b/UOBWebSample/UOBWebSample.csproj
@@ -25,7 +25,7 @@
 
   <ItemGroup>
     <Reference Include="UOL.Models">
-      <HintPath>..\..\Addin\bin\Debug\UOL.Models.dll</HintPath>
+      <HintPath>..\Shared\UOL.Models.dll</HintPath>
     </Reference>
   </ItemGroup>
 
